Melhorias no comportamento das threads